feat: 翻译补充